# crs1906

./: .gitignore  README.md  chapter_index.txt  index.html  pylintrc  ticketmanor.sql
css/: simple.css
examples/: display_python_verson.py
examples/AppC_examples/: person.py  person_spyder_demo.py
examples/appA_examples/: Makefile  README.rst  clean.bat  integrate.c  integrate.pyx  integrate_python.py  primes_c.c  primes_c_wrapper.c  primes_cython.c  primes_cython.pyx  primes_main.c  primes_python.py  setup.py  simple_profiler.py  string_cat_demo.py
examples/appB_examples/: image_proxy_descriptor.py  image_proxy_factory_method.py  introspection_demo.py  pdb_demo.py  pdb_demo_trace.py  simple_counter.py  state_machine.py  template_demo.py  test_tcp_connection.py  vending_machine.py
examples/asteroids/: Asteroids.py  Classes.py  Images.pyw
examples/ch01_examples/: .project  client.py  dataclass_demo.py  function_def.py  function_overloading.py  generator_expr.py  mixin_class.py  multiple_inheritance.py  multiple_inheritance_cooperative.py  multiple_subclasses.py  name_managling.py  productivity.py  pylintrc  reverse_class.py  reverse_generator.py  scratch.py  simple_counter.py  simple_counter_class_attrs.py  simple_counter_dataclass.py  simple_counter_properties.py  students.csv  type_hints_example.py  vacation.py
examples/ch02_examples/: .project  double_list.py  function_overloading.py  generator_expr.py  http_server.py  introspection_demo.py  logging_method.py  metaclass_demo.py  multiple_subclasses.py  request.json  reverse_class.py  reverse_generator.py  template_method.py  template_method_abc.py  thumbnail _image_list.py
examples/ch03_examples/: .project  business_object.py  fixture_demo.py  magicmock_demo.py  mock_demo.py  mock_patch_demo.py  mock_sentinel_demo.py  monkey_patch_business_object.py  monkey_patch_demo.py  person.py  person_buggy.py  pytest_fixture_demo.py  test_person.py  test_person_exceptions.py  test_person_fail.py  test_person_nose.py  test_person_nose_fail.py  test_person_parameterized.py  test_person_pytest.py  test_person_pytest_fail.py  test_person_unittest.py
examples/ch04_examples/: .project  debugging_demo.py  exceptions.py  logging_demo.py  logging_demo_config_file.py  pattern_replace.py  pdb_demo_pm.py  person.py  pylint_messages.txt  pylint_report.html  pylintrc.README.txt  simple_crypt.py  temp.txt  test_person.py  yinyang_singlethreaded.py
examples/ch05_examples/: .project  data_aggregation_demo.py  fibonacci.py  mandelbrot.prof  mandelbrot.py  pi_numba.py  primes_python.py  profile_fibonacci_raw.py  requirements.txt  simple_profiler.py  string_cat_demo.py  temp.txt
examples/ch06_examples/: .project  decorator_demo.py  decorator_monkey_patch.py  display_image.py  generic_lazy_loading_proxy.py  image_proxy.py  image_proxy_factory_method.py  logging.conf  observer.py  tcp_connection.py  test_state_machine.py
examples/ch07_examples/: .project  Makefile  primes_c.h  primes_c_wrapper.pyx  rest_server.py  rich-13.3.5-py3-none-any.whl  test_primes.py
examples/ch07_examples/distribution_demo/: README.md  __main__.py  pyproject.toml
examples/ch07_examples/distribution_demo/docs/: documentation.md
examples/ch07_examples/distribution_demo/examples/: helloworld.py
examples/ch07_examples/distribution_demo/src/setup_example/: sample_mod1.py  sample_mod2.py
examples/ch07_examples/distribution_demo/src/setup_example/utils/: util_mod1.py  util_mod2.py
examples/ch07_examples/distribution_demo/tests/setup_example/: test_sample_mod1.py
examples/ch07_examples/setup_example/: README.rst  __main__.py  pyproject.toml  setup.cfg  setup.py
examples/ch07_examples/setup_example/docs/: documentation.md
examples/ch07_examples/setup_example/setup_example/: sample_mod2.py
examples/ch07_examples/setup_example/setup_example/utils/: util_mod1.py  util_mod2.py
examples/ch07_examples/setup_example/tests/setup_example/: test_sample_mod2.py
examples/ch08_examples/: .project  admin_script.bat  asteroids.py  coroutine_demo2.py  documentation.rst  executor_map_demo.py  imagescale-c.py  imagescale-m.py  imagescale-q-logging.py  imagescale-q-m.py  imagescale-s.py  imagescale-t.py  inventory.csv  inventory2.csv  multiprocessing_demo1.py  multiprocessing_demo2.py  ping_threaded.py  sched_demo.py  scratch.py  simple_queue_demo.py  subprocess_demos.py  subprocess_openssl.py  thread_demo1.py  thread_demo2.py  thread_demo3.py  thread_demo4.py  thread_race.py  thread_race_fixed.py  thread_race_fixed_no_lock.py  whatsnew-q-m.py  whatsnew-q.py
examples/ch09_examples/: .project  __init__.py  amount_to_json.py  asteroids.py  coroutine_demo1.py  customer_ui.py  daemon_demo.py  imagescale-q-m.py  multiprocessing_demo1.py  multiprocessing_demo2.py  ping_threaded.py  sched_demo.py  scratch.py  subprocess_demos.py  subprocess_openssl.py  (+3 more)
exercises/: hints.html  push_to_all.py  pyramid.wsgi  pyvenv.cfg
exercises/ex07_distributing/distributing_project/: pyproject.toml
exercises/ex07_distributing/simple_tz/: README.rst  pyproject.toml  setup.cfg  setup.py
exercises/ex07_distributing/simple_tz/docs/: documentation.md
exercises/ex07_distributing/simple_tz/simple_tz/: tz.py
exercises/solution_ex07_distributing/distributing_project/: pyproject.toml
exercises/solution_ex07_distributing/simple_tz/: README.rst  setup.cfg  setup.py
exercises/solution_ex07_distributing/simple_tz/simple_tz/: tz.py
homepage/: index.html
scripts/: 2to3.bat  activate.bat  build_all.py  cdv.bat  clear_cache.bat  clear_cache.sh  deactivate.bat  fix_git_perms.sh  pip.bat  pull_code.bat  pylint2pycharm.bat  recentProjects.xml  run_ticketmanor.bat  set_git_colors.bat  setup_venv.bat  ticketmanor.bat  use_anaconda.bat  use_pypy.bat  use_python27.bat  use_python31.bat  use_python310.bat  use_python311.bat  use_python313.bat  use_python33.bat  use_python33x86.bat  use_python34.bat  use_python35.bat  use_python37.bat  use_python38.bat  use_python39.bat  use_python_ver - Copy.bat  use_python_ver.bat  zip_modified_exercises.bat  zip_modified_files.sh
tmp/: placeholder  test_db.sqlite
(+863 files in other folders)
