# configuration for a python project setup demo
[metadata]
name = setup_example
version = 1.0.0
author = Pat Python
author_email = pat.python42@email.com
description = Demo of Python project config
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    rich

[options.packages.find]
exclude =
    tests*
