[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# TODO: set name to simple_tz
# HINT: see slide 7-21
...
# TODO: set version to 1.0.0
...
# TODO: set name and email to your name and email address
authors = [
    {...},
]
# TODO: set description to a string
...

readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
# TODO: add a dependency on "pytz"
dependencies = [
    ...
]

[tools.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
