[metadata]
# TODO: set the package name to 'simple_tz'
...
# TODO: set `version` to '1.0.0'
...
# TODO: set `author` to a string with your name
...
# TODO: set `author_email` to a string
...
# TODO: set `description` to a string
...
# TODO: review the remaining build configuration settings
#       (no code change required)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
# TODO: set `install_requires` to pytz
install_requires =
    ...

[options.packages.find]
exclude =
    tests*
