[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# TODO: set name to simple_tz
# HINT: see slide 7-21
name = "simple_tz"
# TODO: set version to 1.0.0
version = "1.0.0"
# TODO: set name and email to your name and email address
authors = [
    {name = "Pat Python", email = "pat.python42@gmail.com"},
]
# TODO: set description to a string
description = "Demo of Python project config"

readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
# TODO: add a dependency on "pytz"
dependencies = [
    "pytz"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
