[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_tz"
version = "1.0.0"
authors = [
    {name = "Pat Python", email = "pat.python42@gmail.com"},
]
description = "Demo of Python project configuration"

readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pytz"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
